# md-simulation-files

2026-pblcs-mon-dim/: README.md
2026-pblcs-mon-dim/ff_optimization_results/data/M1/torsion-0/: aggregated.txt  input.sdf
2026-pblcs-mon-dim/ff_optimization_results/data/M1/torsion-1/: aggregated.txt  input.sdf
2026-pblcs-mon-dim/sample_analysis/: pyproject.toml  remake_figures.slurm
2026-pblcs-mon-dim/sample_analysis/figure_params/: __init__.py  _patch_shap.py  figure_params.py
2026-pblcs-mon-dim/sample_analysis/polished_figures/: dft_torsion_panel.py  dimer_bend_rg_joyplots.py  dimer_conformational_analysis.py  dimer_phase_diagram.py  fragment_rg_and_angle_analysis.py  ml_train_std_only.py  monomer_phase_diagram.py  parity_panel.py  rg_figure.py
2026-pblcs-mon-dim/sample_analysis/supp_info/: all_phi_hists_300K.py  fragment_dft_plots.py  mc_acceptance_table.py  ml_training_metrics.py  order_parameter_timeseries.py  phi_dist_vs_temp.py
2026-pblcs-mon-dim/simulation_preparation/forcefields/: M1.offxml  P1.offxml  overall_forcefield.offxml
2026-pblcs-mon-dim/simulation_preparation/gromacs_files/example_mdp_files/: equilibrate_template.mdp  min.mdp  rem_template.mdp
2026-pblcs-mon-dim/simulation_preparation/gromacs_files/example_slurm_files/: mdp_gen_equilibrate.bash  rem_mdfp_gen.bash  submit_REM_GPU_14.slurm  submit_equilibrate.slurm  submit_minimize.slurm
2026-pblcs-mon-dim/simulation_preparation/parameterization_initialization/: pack_box_dimer.bash  pack_box_monomer.bash  parameterize.py
(+536 files in other folders)
