[project]
name = "ieg-substituent-analysis"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<2",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "scipy>=1.10",
    "MDAnalysis>=2.8",
    "rdkit>=2024.9",
    "pillow>=11",
    "joblib>=1.4",
    "xgboost>=3.0",
    "shap>=0.49",
]
